Final testing and changes made before check-in with mentor. Overall, some small styling changes were made to the lifts page with div spacing with the lifts-video class to ensure styling consistency

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -580,6 +580,7 @@ maintaining desktop and tablet responsiveness*/
         align-items: center;
         flex-wrap: wrap;
         justify-content: center;
+        margin-bottom: 25px;
     }
     
     .lift-video > video{
